--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,8 @@
     <title>Geek Me Speak LLC</title>
     <link rel="stylesheet" href="reboot.css">
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/solid.js"
             integrity="sha384-/BxOvRagtVDn9dJ+JGCtcofNXgQO/CCCVKdMfL115s3gOgQxWaX/tSq5V8dRgsbc"
             crossorigin="anonymous"></script>
