Attempt to make Mastodon verified

--- a/web/index.html
+++ b/web/index.html
@@ -19,5 +19,6 @@
     <script defer src="main.dart.js"></script>
 </head>
 <body>
+<a rel="me" href="https://fluttercommunity.social/@GeekMeSpeak"></a>
 </body>
 </html>
