--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="reboot.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="me" href="https://fluttercommunity.social/@geekmespeak">
+    <link rel="me" href="https://fluttercommunity.social/@GeekMeSpeak">
+    
 
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/solid.js"
             integrity="sha384-/BxOvRagtVDn9dJ+JGCtcofNXgQO/CCCVKdMfL115s3gOgQxWaX/tSq5V8dRgsbc"
